Edit控件更改字体颜色
Edit控件更改字体颜色
通过WM_CTLCOLOREDIT

--- a/PopPad/PopPad/PopPad.vcxproj
+++ b/PopPad/PopPad/PopPad.vcxproj
@@ -147,6 +147,7 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="popfile.c" />
+    <ClCompile Include="popfont.c" />
     <ClCompile Include="poppad3.c" />
     <ClCompile Include="popprint.c" />
   </ItemGroup>
