--- a/HelloBit--位图上面绘图/HelloBit--位图上面绘图/HelloBit--位图上面绘图.vcxproj
+++ b/HelloBit--位图上面绘图/HelloBit--位图上面绘图/HelloBit--位图上面绘图.vcxproj
@@ -19,16 +19,16 @@
     </ProjectConfiguration>
   </ItemGroup>
   <PropertyGroup Label="Globals">
-    <ProjectGuid>{6CECC4BD-81DD-45D9-A44E-30E6355147AA}</ProjectGuid>
+    <ProjectGuid>{EA2F2BC3-8C4B-4293-A706-895414C97FEE}</ProjectGuid>
     <Keyword>Win32Proj</Keyword>
-    <RootNamespace>BitBlt</RootNamespace>
+    <RootNamespace>HelloBit位图上面绘图</RootNamespace>
     <WindowsTargetPlatformVersion>8.1</WindowsTargetPlatformVersion>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
     <ConfigurationType>Application</ConfigurationType>
     <UseDebugLibraries>true</UseDebugLibraries>
-    <PlatformToolset>v140_xp</PlatformToolset>
+    <PlatformToolset>v140</PlatformToolset>
     <CharacterSet>Unicode</CharacterSet>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'" Label="Configuration">
@@ -146,7 +146,13 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="bitblt.c" />
+    <ClInclude Include="resource.h" />
+  </ItemGroup>
+  <ItemGroup>
+    <ResourceCompile Include="HelloBit--位图上面绘图.rc" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClCompile Include="HelloBit.C" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
