--- a/SKETCH/SKETCH/SKETCH.vcxproj
+++ b/SKETCH/SKETCH/SKETCH.vcxproj
@@ -19,16 +19,16 @@
     </ProjectConfiguration>
   </ItemGroup>
   <PropertyGroup Label="Globals">
-    <ProjectGuid>{6CECC4BD-81DD-45D9-A44E-30E6355147AA}</ProjectGuid>
+    <ProjectGuid>{74F0BA3D-D931-42B7-9960-9CEF511F5D2D}</ProjectGuid>
     <Keyword>Win32Proj</Keyword>
-    <RootNamespace>BitBlt</RootNamespace>
+    <RootNamespace>SKETCH</RootNamespace>
     <WindowsTargetPlatformVersion>8.1</WindowsTargetPlatformVersion>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
     <ConfigurationType>Application</ConfigurationType>
     <UseDebugLibraries>true</UseDebugLibraries>
-    <PlatformToolset>v140_xp</PlatformToolset>
+    <PlatformToolset>v140</PlatformToolset>
     <CharacterSet>Unicode</CharacterSet>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'" Label="Configuration">
@@ -146,7 +146,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="bitblt.c" />
+    <ClCompile Include="sketch.c" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
